--- a/notebooks/IS-Analyst.ipynb
+++ b/notebooks/IS-Analyst.ipynb
@@ -23,30 +23,24 @@
    "execution_count": 1,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  ___  ____  ____  ____  ____ ©\n",
-      " /__    /   ____/   /   ____/      17.0\n",
-      "___/   /   /___/   /   /___/       MP—Parallel Edition\n",
-      "\n",
-      " Statistics and Data Science       Copyright 1985-2021 StataCorp LLC\n",
-      "                                   StataCorp\n",
-      "                                   4905 Lakeway Drive\n",
-      "                                   College Station, Texas 77845 USA\n",
-      "                                   800-STATA-PC        https://www.stata.com\n",
-      "                                   979-696-4600        stata@stata.com\n",
-      "\n",
-      "Stata license: Single-user 8-core , expiring  1 Jan 2025\n",
-      "Serial number: 501709301094\n",
-      "  Licensed to: Colin's Stata\n",
-      "               Love U\n",
-      "\n",
-      "Notes:\n",
-      "      1. Unicode is supported; see help unicode_advice.\n",
-      "      2. More than 2 billion observations are allowed; see help obs_advice.\n",
-      "      3. Maximum number of variables is set to 5,000; see help set_maxvar.\n"
+     "ename": "SystemError",
+     "evalue": "initialization of _internal failed without raising an exception",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mSystemError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [1], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnp\u001B[39;00m\n\u001B[0;32m----> 4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mcudf\u001B[39;00m  \u001B[38;5;66;03m#CUDA计算\u001B[39;00m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;66;03m# 自行编写的包\u001B[39;00m\n",
+      "File \u001B[0;32m/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/cudf/__init__.py:5\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Copyright (c) 2018-2022, NVIDIA CORPORATION.\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mcudf\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mgpu_utils\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m validate_setup\n\u001B[0;32m----> 5\u001B[0m \u001B[43mvalidate_setup\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mcupy\u001B[39;00m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m config \u001B[38;5;28;01mas\u001B[39;00m numba_config, cuda\n",
+      "File \u001B[0;32m/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/cudf/utils/gpu_utils.py:20\u001B[0m, in \u001B[0;36mvalidate_setup\u001B[0;34m()\u001B[0m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mwarnings\u001B[39;00m\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mcuda\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcudart\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m cudaDeviceAttr, cudaError_t\n\u001B[0;32m---> 20\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mrmm\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01m_cuda\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mgpu\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m (\n\u001B[1;32m     21\u001B[0m     CUDARuntimeError,\n\u001B[1;32m     22\u001B[0m     deviceGetName,\n\u001B[1;32m     23\u001B[0m     driverGetVersion,\n\u001B[1;32m     24\u001B[0m     getDeviceAttribute,\n\u001B[1;32m     25\u001B[0m     getDeviceCount,\n\u001B[1;32m     26\u001B[0m     runtimeGetVersion,\n\u001B[1;32m     27\u001B[0m )\n\u001B[1;32m     29\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mcudf\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01merrors\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m UnsupportedCUDAError\n\u001B[1;32m     31\u001B[0m notify_caller_errors \u001B[38;5;241m=\u001B[39m {\n\u001B[1;32m     32\u001B[0m     cudaError_t\u001B[38;5;241m.\u001B[39mcudaErrorInitializationError,\n\u001B[1;32m     33\u001B[0m     cudaError_t\u001B[38;5;241m.\u001B[39mcudaErrorInsufficientDriver,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     48\u001B[0m     cudaError_t\u001B[38;5;241m.\u001B[39mcudaErrorApiFailureBase,\n\u001B[1;32m     49\u001B[0m }\n",
+      "File \u001B[0;32m/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/rmm/__init__.py:16\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Copyright (c) 2018-2021, NVIDIA CORPORATION.\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m#\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# Licensed under the Apache License, Version 2.0 (the \"License\");\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;66;03m# See the License for the specific language governing permissions and\u001B[39;00m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;66;03m# limitations under the License.\u001B[39;00m\n\u001B[1;32m     14\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mweakref\u001B[39;00m\n\u001B[0;32m---> 16\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mrmm\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m mr\n\u001B[1;32m     17\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mrmm\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01m_lib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdevice_buffer\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m DeviceBuffer\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mrmm\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01m_version\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m get_versions\n",
+      "File \u001B[0;32m/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/rmm/mr.py:14\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Copyright (c) 2020-2021, NVIDIA CORPORATION.\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m#\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# Licensed under the Apache License, Version 2.0 (the \"License\");\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;66;03m# See the License for the specific language governing permissions and\u001B[39;00m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;66;03m# limitations under the License.\u001B[39;00m\n\u001B[0;32m---> 14\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mrmm\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01m_lib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmemory_resource\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m (\n\u001B[1;32m     15\u001B[0m     BinningMemoryResource,\n\u001B[1;32m     16\u001B[0m     CallbackMemoryResource,\n\u001B[1;32m     17\u001B[0m     CudaAsyncMemoryResource,\n\u001B[1;32m     18\u001B[0m     CudaMemoryResource,\n\u001B[1;32m     19\u001B[0m     DeviceMemoryResource,\n\u001B[1;32m     20\u001B[0m     FailureCallbackResourceAdaptor,\n\u001B[1;32m     21\u001B[0m     FixedSizeMemoryResource,\n\u001B[1;32m     22\u001B[0m     LoggingResourceAdaptor,\n\u001B[1;32m     23\u001B[0m     ManagedMemoryResource,\n\u001B[1;32m     24\u001B[0m     PoolMemoryResource,\n\u001B[1;32m     25\u001B[0m     StatisticsResourceAdaptor,\n\u001B[1;32m     26\u001B[0m     TrackingResourceAdaptor,\n\u001B[1;32m     27\u001B[0m     _flush_logs,\n\u001B[1;32m     28\u001B[0m     _initialize,\n\u001B[1;32m     29\u001B[0m     disable_logging,\n\u001B[1;32m     30\u001B[0m     enable_logging,\n\u001B[1;32m     31\u001B[0m     get_current_device_resource,\n\u001B[1;32m     32\u001B[0m     get_current_device_resource_type,\n\u001B[1;32m     33\u001B[0m     get_log_filenames,\n\u001B[1;32m     34\u001B[0m     get_per_device_resource,\n\u001B[1;32m     35\u001B[0m     get_per_device_resource_type,\n\u001B[1;32m     36\u001B[0m     is_initialized,\n\u001B[1;32m     37\u001B[0m     set_current_device_resource,\n\u001B[1;32m     38\u001B[0m     set_per_device_resource,\n\u001B[1;32m     39\u001B[0m )\n\u001B[1;32m     41\u001B[0m __all__ \u001B[38;5;241m=\u001B[39m [\n\u001B[1;32m     42\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mBinningMemoryResource\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m     43\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCallbackMemoryResource\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     65\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mis_initialized\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m     66\u001B[0m ]\n",
+      "File \u001B[0;32m/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/rmm/_lib/__init__.py:15\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Copyright (c) 2019-2021, NVIDIA CORPORATION.\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m#\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m# Licensed under the Apache License, Version 2.0 (the \"License\");\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;66;03m# See the License for the specific language governing permissions and\u001B[39;00m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;66;03m# limitations under the License.\u001B[39;00m\n\u001B[0;32m---> 15\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdevice_buffer\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m DeviceBuffer\n",
+      "File \u001B[0;32mdevice_buffer.pyx:1\u001B[0m, in \u001B[0;36minit rmm._lib.device_buffer\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32mstream.pyx:26\u001B[0m, in \u001B[0;36minit rmm._cuda.stream\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/numba/__init__.py:42\u001B[0m\n\u001B[1;32m     38\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcore\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdecorators\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m (cfunc, generated_jit, jit, njit, stencil,\n\u001B[1;32m     39\u001B[0m                                    jit_module)\n\u001B[1;32m     41\u001B[0m \u001B[38;5;66;03m# Re-export vectorize decorators and the thread layer querying function\u001B[39;00m\n\u001B[0;32m---> 42\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnp\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mufunc\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m (vectorize, guvectorize, threading_layer,\n\u001B[1;32m     43\u001B[0m                             get_num_threads, set_num_threads,\n\u001B[1;32m     44\u001B[0m                             set_parallel_chunksize, get_parallel_chunksize,\n\u001B[1;32m     45\u001B[0m                             get_thread_id)\n\u001B[1;32m     47\u001B[0m \u001B[38;5;66;03m# Re-export Numpy helpers\u001B[39;00m\n\u001B[1;32m     48\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnp\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnumpy_support\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m carray, farray, from_dtype\n",
+      "File \u001B[0;32m/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/numba/np/ufunc/__init__.py:3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# -*- coding: utf-8 -*-\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnp\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mufunc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdecorators\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m Vectorize, GUVectorize, vectorize, guvectorize\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnp\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mufunc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01m_internal\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m PyUFunc_None, PyUFunc_Zero, PyUFunc_One\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnp\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mufunc\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m _internal, array_exprs\n",
+      "File \u001B[0;32m/usr/local/miniconda3/envs/Stata/lib/python3.9/site-packages/numba/np/ufunc/decorators.py:3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01minspect\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnp\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mufunc\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m _internal\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnp\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mufunc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mparallel\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m ParallelUFuncBuilder, ParallelGUFuncBuilder\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mnumba\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcore\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mregistry\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m DelayedRegistry\n",
+      "\u001B[0;31mSystemError\u001B[0m: initialization of _internal failed without raising an exception"
      ]
     }
    ],
@@ -87,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# 数据集:个股K线面板数据,个股基本面数据\n",
@@ -96,7 +90,10 @@
     "data_loader = Loader()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -1216,9 +1213,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "stata",
+   "name": "pytorch",
    "language": "python",
-   "display_name": "Stata"
+   "display_name": "Rapids"
   },
   "language_info": {
    "codemirror_mode": {
