--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 20:15:32.529953: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-16 16:04:27.151982: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -71,8 +71,7 @@
     "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
     "\n",
     "# 混合精度\n",
-    "# from tensorflow.keras import mixed_precision\n",
-    "\n"
+    "# from tensorflow.keras import mixed_precision"
    ]
   },
   {
@@ -164,7 +163,7 @@
     "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, ]))\n",
     "HP_DROPOUT = hp.HParam('dropout', hp.Discrete([0.2]))\n",
     "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam']))\n",
-    "HP_METHOD = hp.HParam('train_method', hp.Discrete(['TransferLearning', 'FineTune']))\n",
+    "# HP_METHOD = hp.HParam('train_method', hp.Discrete(['TransferLearning', 'FineTune']))\n",
     "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001, 0.00001]))"
    ]
   },
