--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -34,7 +34,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "['QX_STOCKRATE[DES][csv].txt',\n 'QX_TRM1.csv',\n 'QX_FUNDDISCOUNTPREMIUM[DES][csv].txt',\n 'QX_DIVIDENDPREMIUM.csv',\n 'QX_FUNDDISCOUNTPREMIUM1.csv',\n 'QX_FUNDDISCOUNTPREMIUM.csv',\n 'QX_DIVIDENDPREMIUM[DES][csv].txt',\n 'QX_FUNDDISCOUNTPREMIUM.parquet',\n 'QX_TRM.csv',\n 'QX_TRM[DES][csv].txt',\n 'QX_STOCKRATE.csv',\n 'QX_IPO[DES][csv].txt',\n 'QX_IPO.csv']"
+      "text/plain": "['QX_STOCKRATE[DES][csv].txt',\n 'QX_TRM1.csv',\n 'QX_FUNDDISCOUNTPREMIUM[DES][csv].txt',\n 'QX_DIVIDENDPREMIUM.csv',\n 'QX_FUNDDISCOUNTPREMIUM1.csv',\n 'QX_FUNDDISCOUNTPREMIUM.csv',\n 'QX_DIVIDENDPREMIUM[DES][csv].txt',\n 'QX_FUNDDISCOUNTPREMIUM.parquet',\n 'QX_TRM.csv',\n 'QX_TRM[DES][csv].txt',\n 'QX_STOCKRATE.csv',\n 'QX_IPO[DES][csv].txt',\n 'QX_IPO.csv',\n 'QX_IPO.parquet']"
      },
      "execution_count": 2,
      "metadata": {},
@@ -119,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "                   CategoryID FundTypeID  IsETF  IsLOF  IsIndexFund  \\\nTradingDate Symbol                                                    \n19980430    184688      S0601      S0502      2      2            2   \n            500001      S0601      S0502      2      2            2   \n19980630    184688      S0601      S0502      2      2            2   \n            500001      S0601      S0502      2      2            2   \n            500003      S0601      S0502      2      2            2   \n...                       ...        ...    ...    ...          ...   \n20221222    501098      S0604      S0502      2      2            2   \n            501099      S0604      S0502      2      2            2   \n            501200      S0604      S0502      2      2            2   \n            501201      S0604      S0502      2      2            2   \n            501202      S0604      S0502      2      2            2   \n\n                    IsInnovative     NAV  AccumulativeNAV  ClosePrice  \\\nTradingDate Symbol                                                      \n19980430    184688             2  1.0000           1.0000       2.020   \n            500001             2  1.0448           1.0448       2.100   \n19980630    184688             2  1.0442           1.0442       1.680   \n            500001             2  1.0409           1.0409       1.680   \n            500003             2  1.0184           1.0184       1.580   \n...                          ...     ...              ...         ...   \n20221222    501098             2  1.0215           1.0215       1.024   \n            501099             2  1.3172           1.3172       1.316   \n            501200             2  0.7318           0.7318       0.815   \n            501201             2  1.5362           1.5362       1.544   \n            501202             2  0.9975           0.9975       0.980   \n\n                    CovertRate TurnoverRate    DayAvgCR  \nTradingDate Symbol                                       \n19980430    184688      102.00         <NA>  101.500000  \n            500001      101.00         <NA>  101.500000  \n19980630    184688       60.89         <NA>   60.272500  \n            500001       61.40         <NA>   60.272500  \n            500003       55.15         <NA>   60.272500  \n...                        ...          ...         ...  \n20221222    501098        0.24     0.001429    0.293333  \n            501099       -0.09     0.001591    0.293333  \n            501200       11.37     0.003242    0.293333  \n            501201        0.51     0.002085    0.293333  \n            501202       -1.75      0.00039    0.293333  \n\n[35712 rows x 12 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>CategoryID</th>\n      <th>FundTypeID</th>\n      <th>IsETF</th>\n      <th>IsLOF</th>\n      <th>IsIndexFund</th>\n      <th>IsInnovative</th>\n      <th>NAV</th>\n      <th>AccumulativeNAV</th>\n      <th>ClosePrice</th>\n      <th>CovertRate</th>\n      <th>TurnoverRate</th>\n      <th>DayAvgCR</th>\n    </tr>\n    <tr>\n      <th>TradingDate</th>\n      <th>Symbol</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">19980430</th>\n      <th>184688</th>\n      <td>S0601</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.0000</td>\n      <td>1.0000</td>\n      <td>2.020</td>\n      <td>102.00</td>\n      <td>&lt;NA&gt;</td>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th>500001</th>\n      <td>S0601</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.0448</td>\n      <td>1.0448</td>\n      <td>2.100</td>\n      <td>101.00</td>\n      <td>&lt;NA&gt;</td>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">19980630</th>\n      <th>184688</th>\n      <td>S0601</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.0442</td>\n      <td>1.0442</td>\n      <td>1.680</td>\n      <td>60.89</td>\n      <td>&lt;NA&gt;</td>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>500001</th>\n      <td>S0601</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.0409</td>\n      <td>1.0409</td>\n      <td>1.680</td>\n      <td>61.40</td>\n      <td>&lt;NA&gt;</td>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>500003</th>\n      <td>S0601</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.0184</td>\n      <td>1.0184</td>\n      <td>1.580</td>\n      <td>55.15</td>\n      <td>&lt;NA&gt;</td>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th rowspan=\"5\" valign=\"top\">20221222</th>\n      <th>501098</th>\n      <td>S0604</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.0215</td>\n      <td>1.0215</td>\n      <td>1.024</td>\n      <td>0.24</td>\n      <td>0.001429</td>\n      <td>0.293333</td>\n    </tr>\n    <tr>\n      <th>501099</th>\n      <td>S0604</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.3172</td>\n      <td>1.3172</td>\n      <td>1.316</td>\n      <td>-0.09</td>\n      <td>0.001591</td>\n      <td>0.293333</td>\n    </tr>\n    <tr>\n      <th>501200</th>\n      <td>S0604</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0.7318</td>\n      <td>0.7318</td>\n      <td>0.815</td>\n      <td>11.37</td>\n      <td>0.003242</td>\n      <td>0.293333</td>\n    </tr>\n    <tr>\n      <th>501201</th>\n      <td>S0604</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1.5362</td>\n      <td>1.5362</td>\n      <td>1.544</td>\n      <td>0.51</td>\n      <td>0.002085</td>\n      <td>0.293333</td>\n    </tr>\n    <tr>\n      <th>501202</th>\n      <td>S0604</td>\n      <td>S0502</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0.9975</td>\n      <td>0.9975</td>\n      <td>0.980</td>\n      <td>-1.75</td>\n      <td>0.00039</td>\n      <td>0.293333</td>\n    </tr>\n  </tbody>\n</table>\n<p>35712 rows × 12 columns</p>\n</div>"
+      "text/plain": "               DayAvgCR\nTradingDate            \n19980430     101.500000\n19980630      60.272500\n19980731      41.500000\n19980831      28.418000\n19980930      31.054000\n...                 ...\n20221216       4.303333\n20221219       1.501667\n20221220       0.239091\n20221221       0.583000\n20221222       0.293333\n\n[2637 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DayAvgCR</th>\n    </tr>\n    <tr>\n      <th>TradingDate</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19980430</th>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th>19980630</th>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>19980731</th>\n      <td>41.500000</td>\n    </tr>\n    <tr>\n      <th>19980831</th>\n      <td>28.418000</td>\n    </tr>\n    <tr>\n      <th>19980930</th>\n      <td>31.054000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>4.303333</td>\n    </tr>\n    <tr>\n      <th>20221219</th>\n      <td>1.501667</td>\n    </tr>\n    <tr>\n      <th>20221220</th>\n      <td>0.239091</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>0.583000</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.293333</td>\n    </tr>\n  </tbody>\n</table>\n<p>2637 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
     "    \"\"\"\n",
     "    计算封闭式基金溢价\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    '''\n",
     "    保留 封闭式基金\n",
     "    剔除 LOF基金,创新型基金,股票指数基金\n",
@@ -151,12 +151,15 @@
     "    )\n",
     "\n",
     "    '''\n",
-    "    平均加权CovertRate\n",
+    "    CovertRate 平均加权\n",
     "    '''\n",
-    "\n",
     "    df['DayAvgCR'] = df.groupby(level=['TradingDate'])['CovertRate'].transform('mean')\n",
     "\n",
-    "    # CovertRate\n",
+    "    '''\n",
+    "    时间序列\n",
+    "    '''\n",
+    "    df = df.groupby(level=['TradingDate']).first()[['DayAvgCR']]\n",
+    "\n",
     "    return df\n",
     "\n",
     "\n",
@@ -222,10 +225,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "               DayAvgRR  DayTotalN\nListedDate                        \n19901210          0.803          1\n19901219    48.89698229          7\n19910114          14.98          1\n19910129          13.58          1\n19910403          0.225          1\n...                 ...        ...\n20221216      0.1284755          2\n20221221       0.156567          1\n20221222       0.157636          2\n20221223           <NA>          0\n20221226           <NA>          0\n\n[2615 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DayAvgRR</th>\n      <th>DayTotalN</th>\n    </tr>\n    <tr>\n      <th>ListedDate</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19901210</th>\n      <td>0.803</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19901219</th>\n      <td>48.89698229</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>19910114</th>\n      <td>14.98</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19910129</th>\n      <td>13.58</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19910403</th>\n      <td>0.225</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>0.1284755</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>0.156567</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.157636</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>20221223</th>\n      <td>&lt;NA&gt;</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>20221226</th>\n      <td>&lt;NA&gt;</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>2615 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# pd.read_csv(f'{DATASETS_PATH}QX_IPO.csv')"
+    "def cal_ipo():\n",
+    "    \"\"\"\n",
+    "    计算IPO信息\n",
+    "    \"\"\"\n",
+    "    df = cudf.read_parquet(f'{DATASETS_PATH}QX_IPO.parquet')\n",
+    "\n",
+    "    '''\n",
+    "    计算平均首日收益\n",
+    "    '''\n",
+    "    df['DayAvgRR'] = df.groupby(level=['ListedDate'])['ReturnRate'].transform('mean')\n",
+    "    df['DayTotalN'] = df.groupby(level=['ListedDate'])['ReturnRate'].transform('count')\n",
+    "    df = df.groupby(level=['ListedDate']).first()[['DayAvgRR', 'DayTotalN']]\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "df_ipo = cal_ipo()\n",
+    "df_ipo"
    ],
    "metadata": {
     "collapsed": false
