--- a/notebooks/IS-FinMarket.ipynb
+++ b/notebooks/IS-FinMarket.ipynb
@@ -34,7 +34,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "['QX_STOCKRATE[DES][csv].txt',\n 'QX_TRM1.csv',\n 'QX_FUNDDISCOUNTPREMIUM[DES][csv].txt',\n 'QX_DIVIDENDPREMIUM.csv',\n 'QX_FUNDDISCOUNTPREMIUM1.csv',\n 'QX_FUNDDISCOUNTPREMIUM.csv',\n 'QX_DIVIDENDPREMIUM[DES][csv].txt',\n 'QX_FUNDDISCOUNTPREMIUM.parquet',\n 'QX_TRM.csv',\n 'QX_TRM[DES][csv].txt',\n 'QX_STOCKRATE.csv',\n 'QX_IPO[DES][csv].txt',\n 'QX_IPO.csv',\n 'QX_IPO.parquet']"
+      "text/plain": "['QX_STOCKRATE[DES][csv].txt',\n 'QX_TRM1.csv',\n 'QX_FUNDDISCOUNTPREMIUM[DES][csv].txt',\n 'QX_DIVIDENDPREMIUM.csv',\n 'QX_FUNDDISCOUNTPREMIUM1.csv',\n 'QX_FUNDDISCOUNTPREMIUM.csv',\n 'QX_DIVIDENDPREMIUM[DES][csv].txt',\n 'QX_DIVIDENDPREMIUM.parquet',\n 'QX_FUNDDISCOUNTPREMIUM.parquet',\n 'QX_TRM.csv',\n 'QX_TRM[DES][csv].txt',\n 'QX_STOCKRATE.csv',\n 'QX_IPO[DES][csv].txt',\n 'QX_IPO.csv',\n 'QX_IPO.parquet']"
      },
      "execution_count": 2,
      "metadata": {},
@@ -67,9 +67,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "         LogPDND\nSgnYear         \n1991     -0.9005\n1992     -0.2720\n1993     -0.0592\n1994     -0.1019\n1995     -0.0237\n1996     -0.0648\n1997     -0.0639\n1998     -0.0479\n1999     -0.0426\n2000     -0.0986\n2001     -0.1214\n2002     -0.1240\n2003     -0.0583\n2004     -0.0422\n2005     -0.0260\n2006     -0.4844\n2007     -0.0814\n2008     -0.1156\n2009     -1.4346\n2010     -0.3186\n2011     -0.1881\n2012     -0.2554\n2013     -0.2100\n2014     -0.3537\n2015     -0.2930\n2016     -0.2139\n2017     -0.1705\n2018     -0.1669\n2019     -0.1055\n2020     -0.0270\n2021     -0.0318",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>LogPDND</th>\n    </tr>\n    <tr>\n      <th>SgnYear</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1991</th>\n      <td>-0.9005</td>\n    </tr>\n    <tr>\n      <th>1992</th>\n      <td>-0.2720</td>\n    </tr>\n    <tr>\n      <th>1993</th>\n      <td>-0.0592</td>\n    </tr>\n    <tr>\n      <th>1994</th>\n      <td>-0.1019</td>\n    </tr>\n    <tr>\n      <th>1995</th>\n      <td>-0.0237</td>\n    </tr>\n    <tr>\n      <th>1996</th>\n      <td>-0.0648</td>\n    </tr>\n    <tr>\n      <th>1997</th>\n      <td>-0.0639</td>\n    </tr>\n    <tr>\n      <th>1998</th>\n      <td>-0.0479</td>\n    </tr>\n    <tr>\n      <th>1999</th>\n      <td>-0.0426</td>\n    </tr>\n    <tr>\n      <th>2000</th>\n      <td>-0.0986</td>\n    </tr>\n    <tr>\n      <th>2001</th>\n      <td>-0.1214</td>\n    </tr>\n    <tr>\n      <th>2002</th>\n      <td>-0.1240</td>\n    </tr>\n    <tr>\n      <th>2003</th>\n      <td>-0.0583</td>\n    </tr>\n    <tr>\n      <th>2004</th>\n      <td>-0.0422</td>\n    </tr>\n    <tr>\n      <th>2005</th>\n      <td>-0.0260</td>\n    </tr>\n    <tr>\n      <th>2006</th>\n      <td>-0.4844</td>\n    </tr>\n    <tr>\n      <th>2007</th>\n      <td>-0.0814</td>\n    </tr>\n    <tr>\n      <th>2008</th>\n      <td>-0.1156</td>\n    </tr>\n    <tr>\n      <th>2009</th>\n      <td>-1.4346</td>\n    </tr>\n    <tr>\n      <th>2010</th>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>2011</th>\n      <td>-0.1881</td>\n    </tr>\n    <tr>\n      <th>2012</th>\n      <td>-0.2554</td>\n    </tr>\n    <tr>\n      <th>2013</th>\n      <td>-0.2100</td>\n    </tr>\n    <tr>\n      <th>2014</th>\n      <td>-0.3537</td>\n    </tr>\n    <tr>\n      <th>2015</th>\n      <td>-0.2930</td>\n    </tr>\n    <tr>\n      <th>2016</th>\n      <td>-0.2139</td>\n    </tr>\n    <tr>\n      <th>2017</th>\n      <td>-0.1705</td>\n    </tr>\n    <tr>\n      <th>2018</th>\n      <td>-0.1669</td>\n    </tr>\n    <tr>\n      <th>2019</th>\n      <td>-0.1055</td>\n    </tr>\n    <tr>\n      <th>2020</th>\n      <td>-0.0270</td>\n    </tr>\n    <tr>\n      <th>2021</th>\n      <td>-0.0318</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# pd.read_csv(f'{DATASETS_PATH}QX_DIVIDENDPREMIUM.csv')"
+    "def cal_pd():\n",
+    "    df = cudf.read_parquet(f'{DATASETS_PATH}QX_DIVIDENDPREMIUM.parquet')\n",
+    "    return df[['LogPDND']]\n",
+    "\n",
+    "\n",
+    "df_pd = cal_pd()\n",
+    "df_pd"
    ],
    "metadata": {
     "collapsed": false
@@ -123,8 +139,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "               DayAvgCR\nTradingDate            \n19980430     101.500000\n19980630      60.272500\n19980731      41.500000\n19980831      28.418000\n19980930      31.054000\n...                 ...\n20221216       4.303333\n20221219       1.501667\n20221220       0.239091\n20221221       0.583000\n20221222       0.293333\n\n[2637 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DayAvgCR</th>\n    </tr>\n    <tr>\n      <th>TradingDate</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19980430</th>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th>19980630</th>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>19980731</th>\n      <td>41.500000</td>\n    </tr>\n    <tr>\n      <th>19980831</th>\n      <td>28.418000</td>\n    </tr>\n    <tr>\n      <th>19980930</th>\n      <td>31.054000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>4.303333</td>\n    </tr>\n    <tr>\n      <th>20221219</th>\n      <td>1.501667</td>\n    </tr>\n    <tr>\n      <th>20221220</th>\n      <td>0.239091</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>0.583000</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.293333</td>\n    </tr>\n  </tbody>\n</table>\n<p>2637 rows × 1 columns</p>\n</div>"
+      "text/plain": "                   CEFD\nTradingDate            \n19980430     101.500000\n19980630      60.272500\n19980731      41.500000\n19980831      28.418000\n19980930      31.054000\n...                 ...\n20221216       4.303333\n20221219       1.501667\n20221220       0.239091\n20221221       0.583000\n20221222       0.293333\n\n[2637 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CEFD</th>\n    </tr>\n    <tr>\n      <th>TradingDate</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19980430</th>\n      <td>101.500000</td>\n    </tr>\n    <tr>\n      <th>19980630</th>\n      <td>60.272500</td>\n    </tr>\n    <tr>\n      <th>19980731</th>\n      <td>41.500000</td>\n    </tr>\n    <tr>\n      <th>19980831</th>\n      <td>28.418000</td>\n    </tr>\n    <tr>\n      <th>19980930</th>\n      <td>31.054000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>4.303333</td>\n    </tr>\n    <tr>\n      <th>20221219</th>\n      <td>1.501667</td>\n    </tr>\n    <tr>\n      <th>20221220</th>\n      <td>0.239091</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>0.583000</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.293333</td>\n    </tr>\n  </tbody>\n</table>\n<p>2637 rows × 1 columns</p>\n</div>"
      },
      "execution_count": 5,
      "metadata": {},
@@ -160,7 +176,7 @@
     "    '''\n",
     "    df = df.groupby(level=['TradingDate']).first()[['DayAvgCR']]\n",
     "\n",
-    "    return df\n",
+    "    return df.rename(columns={'DayAvgCR': 'CEFD'})\n",
     "\n",
     "\n",
     "df_cefd = cal_cefd()\n",
@@ -225,14 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "               DayAvgRR  DayTotalN\nListedDate                        \n19901210          0.803          1\n19901219    48.89698229          7\n19910114          14.98          1\n19910129          13.58          1\n19910403          0.225          1\n...                 ...        ...\n20221216      0.1284755          2\n20221221       0.156567          1\n20221222       0.157636          2\n20221223           <NA>          0\n20221226           <NA>          0\n\n[2615 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DayAvgRR</th>\n      <th>DayTotalN</th>\n    </tr>\n    <tr>\n      <th>ListedDate</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19901210</th>\n      <td>0.803</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19901219</th>\n      <td>48.89698229</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>19910114</th>\n      <td>14.98</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19910129</th>\n      <td>13.58</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19910403</th>\n      <td>0.225</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>0.1284755</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>0.156567</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.157636</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>20221223</th>\n      <td>&lt;NA&gt;</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>20221226</th>\n      <td>&lt;NA&gt;</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>2615 rows × 2 columns</p>\n</div>"
+      "text/plain": "               DayAvgRR  NIPO\nListedDate                   \n19901210          0.803     1\n19901219    48.89698229     7\n19910114          14.98     1\n19910129          13.58     1\n19910403          0.225     1\n...                 ...   ...\n20221216      0.1284755     2\n20221221       0.156567     1\n20221222       0.157636     2\n20221223           <NA>     0\n20221226           <NA>     0\n\n[2615 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DayAvgRR</th>\n      <th>NIPO</th>\n    </tr>\n    <tr>\n      <th>ListedDate</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19901210</th>\n      <td>0.803</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19901219</th>\n      <td>48.89698229</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>19910114</th>\n      <td>14.98</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19910129</th>\n      <td>13.58</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19910403</th>\n      <td>0.225</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>0.1284755</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>0.156567</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.157636</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>20221223</th>\n      <td>&lt;NA&gt;</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>20221226</th>\n      <td>&lt;NA&gt;</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>2615 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,11 +267,42 @@
     "    df['DayTotalN'] = df.groupby(level=['ListedDate'])['ReturnRate'].transform('count')\n",
     "    df = df.groupby(level=['ListedDate']).first()[['DayAvgRR', 'DayTotalN']]\n",
     "\n",
-    "    return df\n",
+    "    return df.rename(columns={'DayAvgCR': 'RIPO', 'DayTotalN': 'NIPO'})\n",
     "\n",
     "\n",
     "df_ipo = cal_ipo()\n",
     "df_ipo"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 合成"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "             DayAvgRR  NIPO         CEFD\n19901210        0.803     1         <NA>\n19901219  48.89698229     7         <NA>\n19910114        14.98     1         <NA>\n19910129        13.58     1         <NA>\n19910403        0.225     1         <NA>\n...               ...   ...          ...\n20221216    0.1284755     2  4.303333333\n20221221     0.156567     1        0.583\n20221222     0.157636     2  0.293333333\n20221223         <NA>     0         <NA>\n20221226         <NA>     0         <NA>\n\n[2615 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DayAvgRR</th>\n      <th>NIPO</th>\n      <th>CEFD</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>19901210</th>\n      <td>0.803</td>\n      <td>1</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19901219</th>\n      <td>48.89698229</td>\n      <td>7</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19910114</th>\n      <td>14.98</td>\n      <td>1</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19910129</th>\n      <td>13.58</td>\n      <td>1</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>19910403</th>\n      <td>0.225</td>\n      <td>1</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>20221216</th>\n      <td>0.1284755</td>\n      <td>2</td>\n      <td>4.303333333</td>\n    </tr>\n    <tr>\n      <th>20221221</th>\n      <td>0.156567</td>\n      <td>1</td>\n      <td>0.583</td>\n    </tr>\n    <tr>\n      <th>20221222</th>\n      <td>0.157636</td>\n      <td>2</td>\n      <td>0.293333333</td>\n    </tr>\n    <tr>\n      <th>20221223</th>\n      <td>&lt;NA&gt;</td>\n      <td>0</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n    <tr>\n      <th>20221226</th>\n      <td>&lt;NA&gt;</td>\n      <td>0</td>\n      <td>&lt;NA&gt;</td>\n    </tr>\n  </tbody>\n</table>\n<p>2615 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pca = df_ipo.join(df_cefd)\n",
+    "df_pca.sort_index()"
    ],
    "metadata": {
     "collapsed": false
